--- a/SATEMapp/app/src/main/AndroidManifest.xml
+++ b/SATEMapp/app/src/main/AndroidManifest.xml
@@ -9,19 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar">
+
+        <activity android:name=".LoginActivity" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity android:name=".MainActivity"/>
+
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
+
     </application>
 
 </manifest>
