--- a/SATEMapp/app/src/main/AndroidManifest.xml
+++ b/SATEMapp/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         </activity>
 
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <activity
