SATEM APP & WEB - SEVERAL BUGS FIXED

--- a/SATEMapp/app/src/main/AndroidManifest.xml
+++ b/SATEMapp/app/src/main/AndroidManifest.xml
@@ -24,9 +24,9 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-
-        <activity android:name=".UpdateActivity"
-            android:label="@string/updateLabel"/>
+        <activity
+            android:name=".UpdateActivity"
+            android:label="@string/updateLabel" />
     </application>
 
 </manifest>
