--- a/SATEMapp/app/src/main/AndroidManifest.xml
+++ b/SATEMapp/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".UpdateActivity"
             android:label="@string/updateLabel" />
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
