--- a/SATEMapp/app/src/main/AndroidManifest.xml
+++ b/SATEMapp/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="com.example.r_2g_.satemapp">
 
     <application
+        android:name=".SATEM"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".SATEM"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
@@ -30,7 +30,8 @@
             android:label="@string/updateLabel" />
         <activity
             android:name=".ProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".passwordReset"></activity>
     </application>
 
 </manifest>
